--- a/templates/base.html
+++ b/templates/base.html
@@ -8,8 +8,18 @@
         <link rel="stylesheet" href="/static/style.css">
     </head>
     <body>
+        {% for msg in get_flashed_messages() %}
+        <p class="flash-msg">
+          {{ msg }}
+        </p>
+        {% endfor %}
+
         {% block content %}
     
         {% endblock %}
     </body>
+    <footer>
+        {% block footer %}
+        {% endblock %}
+    </footer>
 </html>
