--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -6,10 +6,11 @@
 <h1>52 Weeks of Journal Intentions</h1>
 <div><img src="/static/images/mountainsCa.jpeg" alt="mountain" id="mountain" /></div>
 
+<h3><u>Log In</u></h3>
 <form action="/login" method="POST">
   <div>
-    <label for="user_id">User Name:</label>
-    <input type="text" name="name" id="user_id" required />
+    <label for="user_id">Email:</label>
+    <input type="text" name="email" id="user_id" required />
   </div>
   <div>
     <label for="user_password">Password:</label>
@@ -19,4 +20,30 @@
     <button type="submit">Log In!</button>
   </div>
 </form>
+
+
+<h3><u>Create an Account</u></h3>
+<form action="/users" method="POST">
+  <div>
+    <label for="user_id">Email:</label>
+    <input type="text" name="email"/>
+  </div>
+  <div>
+    <label for="user_password">Password:</label>
+    <input type="text" name="password"/>
+  </div>
+  <div>
+    <label for="fname">First Name:</label>
+    <input type="text" name="fname"/>
+  </div>
+  <div>
+    <label for="lname">Last Name:</label>
+    <input type="text" name="lname"/>
+  </div>
+  <div>
+    <button type="submit">Create User!</button>
+  </div>
+</form>
+
+
 {% endblock %}
