prompts display on user journal page, able to submit entry and set visibility.

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -14,7 +14,7 @@
   </div>
   <div>
     <label for="user_password">Password:</label>
-    <input type="text" name="password" id="user_password" required />
+    <input type="password" name="password" id="user_password" required />
   </div>
   <div>
     <button type="submit">Log In!</button>
@@ -30,7 +30,7 @@
   </div>
   <div>
     <label for="user_password">Password:</label>
-    <input type="text" name="password"/>
+    <input type="password" name="password"/>
   </div>
   <div>
     <label for="fname">First Name:</label>
