--- a/templates/my-journal.html
+++ b/templates/my-journal.html
@@ -15,7 +15,7 @@
     </textarea><br>
     
     <label for="visibility">Entry Visibility</label>
-  <select name="visibility" required>
+  <select name="visibility">
       <option value="Private">Keep this entry private</option>
       <option value="Friends">Share this entry with friends</option>
       <option value="Public">Share this entry with everyone</option>
