--- a/templates/base.html
+++ b/templates/base.html
@@ -5,9 +5,13 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>{%block title%}52 Weeks Journal{% endblock %}</title>
+        <!-- Bootstrap CSS -->
+        <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous"> -->
+        <!-- Your custom styles -->
         <link rel="stylesheet" href="/static/style.css">
     </head>
     <body>
+
         {% for msg in get_flashed_messages() %}
         <p class="flash-msg">
           {{ msg }}
@@ -16,6 +20,8 @@
 
         {% block content %}
     
+        <!-- JavaScript Bundle with Popper -->
+<!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script> -->
         {% endblock %}
     </body>
     <footer>
