--- a/templates/shared-entries.html
+++ b/templates/shared-entries.html
@@ -9,7 +9,7 @@
     <div id="shared-entries" class="col"></div>
 
 
-<script type='module' src='/static/js/sharedEntries.js'></script>
+<script src='/static/js/sharedEntries.js'></script>
 {% endblock %}
 
 {% block footer %}
