--- a/static/style.css
+++ b/static/style.css
@@ -2,14 +2,14 @@ html {
     background-color: lightskyblue;
 }
 
-h1, p, #entry {
+h1, p, #entry, li {
     color: navy;
     font-weight: bolder;
     font-family: cursive;
     text-align: center;
 }
 
-form, h3, .flash-msg, a {
+form, h3, .flash-msg, a , #journal_entry {
     color: navy;
     font-weight: bolder;
     font-family: cursive;
@@ -26,7 +26,7 @@ img {
     box-shadow: 10px 10px 10px 15px navy;
    }
 
-button {
+button, #entry_visibility {
     background-color: white;
     border: solid 4px navy;
     font-weight: bold;
@@ -34,3 +34,34 @@ button {
     font-family: cursive;
   }
 
+#bonus_text_button {
+    background-color: white;
+    border: solid 2px navy;
+    font-weight: bold;
+    color: navy;
+    font-family: cursive;
+    
+}
+
+.collapsible {
+    background-color: navy;
+    color: white;
+    cursor: pointer;
+    padding: 18px;
+    width: 100%;
+    border: none;
+    text-align: left;
+    outline: none;
+    font-size: 15px;
+  }
+  
+  .active, .collapsible:hover {
+    background-color: blue;
+  }
+  
+  .content {
+    padding: 0 18px;
+    display: none;
+    overflow: hidden;
+    background-color: #f1f1f1;
+  }
