--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -1,49 +1,59 @@
-{% extends 'base.html' %}
+<!DOCTYPE html>
+<html lang="en" style="background-image: url(/static/images/mountainsCa.jpeg)">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>{%block title%}52 Weeks Journal{% endblock %}</title>
+        <!-- Bootstrap CSS -->
+  <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous"> -->
+        <!-- Your custom styles -->
+  <link rel="stylesheet" href="/static/style.css">
+</head>
 
-{% block title %} Journal Login {% endblock %}
+<body>
 
-{% block content %}     
-<h1>52 Weeks of Journal Intentions</h1>
-<div><img src="/static/images/mountainsCa.jpeg" alt="mountain" id="mountain" /></div>
+  <h1>52 Weeks of Journal Intentions</h1>
+  <!-- <div><img src="/static/images/mountainsCa.jpeg" alt="mountain" id="mountain" /></div> -->
 
-<h3><u>Log In</u></h3>
-<form action="/login" method="POST">
-  <div>
-    <label for="user_id">Email:</label>
-    <input type="text" name="email" id="user_id" required />
-  </div>
-  <div>
-    <label for="user_password">Password:</label>
-    <input type="password" name="password" id="user_password" required />
-  </div>
-  <div>
-    <button type="submit">Log In!</button>
-  </div>
-</form>
-
-
-<h3><u>Create an Account</u></h3>
-<form action="/users" method="POST">
-  <div>
-    <label for="user_id">Email:</label>
-    <input type="text" name="email"/>
-  </div>
-  <div>
-    <label for="user_password">Password:</label>
-    <input type="password" name="password"/>
-  </div>
-  <div>
-    <label for="fname">First Name:</label>
-    <input type="text" name="fname"/>
-  </div>
-  <div>
-    <label for="lname">Last Name:</label>
-    <input type="text" name="lname"/>
-  </div>
-  <div>
-    <button type="submit">Create User!</button>
-  </div>
-</form>
+  <h3><u>Log In</u></h3>
+  <form action="/login" method="POST">
+    <div>
+      <label for="user_id">Email:</label>
+      <input type="text" name="email" id="user_id" required />
+    </div>
+    <div>
+      <label for="user_password">Password:</label>
+      <input type="password" name="password" id="user_password" required />
+    </div>
+    <div>
+      <button id="homepage_button" type="submit">Log In!</button>
+   </div>
+  </form>
 
 
-{% endblock %}
+  <h3><u>Create an Account</u></h3>
+  <form action="/users" method="POST">
+    <div>
+      <label for="user_id">Email:</label>
+      <input type="text" name="email"/>
+    </div>
+    <div>
+      <label for="user_password">Password:</label>
+      <input type="password" name="password"/>
+    </div>
+    <div>
+      <label for="fname">First Name:</label>
+      <input type="text" name="fname"/>
+    </div>
+    <div>
+      <label for="lname">Last Name:</label>
+      <input type="text" name="lname"/>
+    </div>
+    <div>
+      <button id="homepage_button" type="submit">Create User!</button>
+    </div>
+  </form>
+  <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script> -->
+</body>
+</html>
