--- a/templates/base.html
+++ b/templates/base.html
@@ -5,6 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>{%block title%}52 Weeks Journal{% endblock %}</title>
+        <link rel="icon" type="image/x-icon" href="/static/images/journal_icon.png">
         <!-- Bootstrap CSS -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
         <!-- Your custom styles -->
@@ -13,22 +14,31 @@
     <body>
         <nav class="navbar">
             <div class="container-fluid">
-                
+                <div class="d-inline-flex">  
+                    <a class="nav-link active" aria-current="page" href="/my-journal">My Journal</a> 
+                    <a class="nav-link active" aria-current="page" href="/entry">{{user.fname}}'s Entries</a>
+                    <a class="nav-link active" aria-current="page" href="/shared-entries">Journal Community</a>
+                    
+                  </div>
+                  <a class="nav-link active" style="justify-content: end" href="/logout">Logout</a>
+             </div>
+         </nav>
               
-            <a class="navbar-brand" href="/my-journal">
-                <img id="icon" src="/static/images/moleskine_pure.png" alt="" Style="color: white" class="d-inline-block"> </a>
-            {% block navbar %} 
-            {% endblock %}
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar_supported_content" aria-controls="navbar_supported_content" aria-expanded="false" aria-label="Toggle navigation">
+                  <!-- <nav class="navbar">
+                    <div class="container-fluid">
+                         <a class="navbar-brand" href="/my-journal">
+                            <img id="icon" src="/static/images/moleskine_pure.png" alt="" Style="color: white" class="d-inline-block"> My Journal</a>
+                             --> 
+              <!-- <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar_supported_content" aria-controls="navbar_supported_content" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
-              </button>
+              </button> -->
             <!-- <div class="collapse navbar-collapse" id="navbar_supported_content"> -->
                 <!-- <ul class="navbar-nav me-auto mb-2 mb-lg-0"> 
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
                 </ul> -->
-            <div class="collapse navbar-collapse" id="navbar_supported_content">
+            <!-- <div class="nav_bar" id="navbar_supported_content">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="/entry">{{user.fname}}'s Entries</a>
@@ -41,7 +51,7 @@
                     </li>
                 </ul>
             </div>
-        </nav>
+        </nav> -->
 
         {% for msg in get_flashed_messages() %}
         <p class="flash-msg">
