--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en" style="background-image: url(/static/images/desert.png)">
     <head>
         <meta charset="UTF-8">
@@ -8,6 +8,8 @@
         <link rel="icon" type="image/x-icon" href="/static/images/journal_icon.png">
         <!-- Bootstrap CSS -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+                    <!-- JavaScript Bundle with Popper -->
+                    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
         <!-- Your custom styles -->
         <link rel="stylesheet" href="/static/style.css">
     </head>
@@ -63,8 +65,13 @@
     
 
         {% endblock %}
-            <!-- JavaScript Bundle with Popper -->
-            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
+
+        <script>
+            $(document).ready(function(){
+                // Enable popovers everywhere
+                $('[data-bs-toggle="popover"]').popover();  
+            });
+        </script>
     </body>
     <footer>
         {% block footer %}
