--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -51,7 +51,19 @@
       <input type="text" name="lname"/>
     </div>
     <div>
+      Would you like to be alerted via email when a new entry is released?
+    
+      <input type="radio" name="twilio_alert" value="Yes" id="yes_twilio">
+      <label for="yes_twilio">Yes</label>
+    
+      <input type="radio" name="twilio_alert" value="No" id="no_twilio">
+      <label for="no_twilio">No</label>
+    </form>
+    <div>
       <button id="homepage_button" type="submit">Create User!</button>
+    </div>
+    <div>
+    
     </div>
   </form>
   <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script> -->
