--- a/templates/shared-entries.html
+++ b/templates/shared-entries.html
@@ -17,6 +17,7 @@
 <script src='/static/js/sharedEntries.js'></script>
 {% endblock %}
 
-{% block footer %}
 
+{% block footer %}
+<p>Current day: {{session['date']}}</p>
 {% endblock %}
