--- a/templates/community.html
+++ b/templates/community.html
@@ -6,6 +6,16 @@
 
 <h1> Journal Community</h1>
 
+<div id="radio-container">
+  
+    <input type="radio" name="community-view" value="everyone" id="community-everyone">
+    <label for="community-everyone">Everyone</label>
+  
+    <input type="radio" name="community-view" value="connections" id="community-connections">
+    <label for="community-connections">Connections Only</label>
+
+</div>
+
 <div class="row">
     <div id="shared-entries" class="col"></div>
 
