--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -9,13 +9,16 @@
   <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous"> -->
         <!-- Your custom styles -->
   <link rel="stylesheet" href="/static/style.css">
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Fredericka+the+Great&display=swap');
+  </style>
 </head>
 
 <body>
+  
 
-  <h1>52 Weeks of Journal Intentions</h1>
-  <!-- <div><img src="/static/images/mountainsCa.jpeg" alt="mountain" id="mountain" /></div> -->
-
+  <h1 id="login_title"></h1>
+  
   <h3><u>Log In</u></h3>
   <form action="/login" method="POST">
     <div>
@@ -67,5 +70,6 @@
     </div>
   </form>
   <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script> -->
+  <script src='/static/js/homepage.js'></script>
 </body>
 </html>
